# game

./: CMakeLists.txt  config.h.in
cmake/: CMakeCache.txt  Game  Makefile  cmake_install.cmake  config.h
cmake/lib/SDL2/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
include/: keyboard.h  log.h  util.h
include/tests/: log_test.h  run_tests.h  test.h
scripts/: _backup.py  build  clean
src/: image.cpp  keyboard.cpp  log.cpp  main.cpp  util.cpp
src/tests/: log_test.cpp  run_tests.cpp  test.cpp
src/tests/test_files/: log_test_thread.txt
